Added Google Search and I'm Feeling Lucky Buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <meta charset="UTF-8">
 </head>
 
 <body>
@@ -26,6 +27,10 @@
                 <input type="text" class="input" >
                 <div class="outline"></div>
             </div>
+        </div>
+        <div class="bottom-buttons-container">
+            <p class="bottom-buttons">Google Search</p>
+            <p class="bottom-buttons">I'm Feeling Lucky</p>
         </div>
     </main>
  
