Added Shadow for buttons, added app icon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a style= "float:left" class="buttons" href="#">About</a>
             <a style= "float:left" class="buttons" href="#">Store</a>
             <a target="_blank" href="https://github.com/jmcn99"><img style="float: right" id="github" src="github-icon-4.jpg" alt="Profile Picture"></a>
+            <span id="apps" style="float: right" class="material-icons">apps</span>
             <a style="float: right" class="buttons" href="#">Images</a>                
             <a style="float: right" class="buttons" href="#">Gmail</a>
         </nav>
@@ -29,8 +30,8 @@
             </div>
         </div>
         <div class="bottom-buttons-container">
-            <p class="bottom-buttons">Google Search</p>
-            <p class="bottom-buttons">I'm Feeling Lucky</p>
+            <a href="#" class="bottom-buttons">Google Search</a>
+            <a href="#" class="bottom-buttons">I'm Feeling Lucky</a>
         </div>
     </main>
  
