--- a/index.html
+++ b/index.html
@@ -8,34 +8,45 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a style= "float:left" class="buttons" href="#">About</a>
-            <a style= "float:left" class="buttons" href="#">Store</a>
-            <a target="_blank" href="https://github.com/jmcn99"><img style="float: right" id="github" src="github-icon-4.jpg" alt="Profile Picture"></a>
-            <span id="apps" style="float: right" class="material-icons">apps</span>
-            <a style="float: right" class="buttons" href="#">Images</a>                
-            <a style="float: right" class="buttons" href="#">Gmail</a>
-        </nav>
-    </header>
-    <main>
-        <div class="logo">
-            <img class="googleimg" src="googlelogo.png">
-        </div>
-        <div class="search-container">
-            <div class="search">
-                <span  id="search-icon" class="material-icons">search</span>
-                <input type="text" class="input" >
-                <div class="outline"></div>
-            </div>
-        </div>
-        <div class="bottom-buttons-container">
-            <a href="#" class="bottom-buttons">Google Search</a>
-            <a href="#" class="bottom-buttons">I'm Feeling Lucky</a>
-        </div>
-    </main>
- 
+    <div id="page-container"> 
+        <div id="content-wrap">
+            <header>
+                <nav>
+                    <a style= "float:left" class="buttons" href="#">About</a>
+                    <a style= "float:left" class="buttons" href="#">Store</a>
+                    <a target="_blank" href="https://github.com/jmcn99"><img style="float: right" id="github" src="github-icon-4.jpg" alt="Profile Picture"></a>
+                    <span id="apps" style="float: right" class="material-icons">apps</span>
+                    <a style="float: right" class="buttons" href="#">Images</a>                
+                    <a style="float: right" class="buttons" href="#">Gmail</a>
+                </nav>
+            </header>
+            <main>
+                <div class="logo">
+                    <img class="googleimg" src="googlelogo.png">
+                </div>
+                <div class="search-container">
+                    <div class="search">
+                        <span  id="search-icon" class="material-icons">search</span>
+                        <input type="text" class="input" >
+                        <div class="outline"></div>
+                    </div>
+                </div>
+                <div class="bottom-buttons-container">
+                    <a href="#" class="bottom-buttons">Google Search</a>
+                    <a href="#" class="bottom-buttons">I'm Feeling Lucky</a>
+                </div>
+            </main>
 
+        </div>
+        <footer id="footer">
+            <a class="footer-button" style="float: left" href="#">Advertising</a>
+            <a class="footer-button" style="float: left" href="#">Business</a>
+            <a class="footer-button" style="float: left" href="#">How Search Works</a>
+            <a class="footer-button" style="float: right" href="#">Privacy</a>
+            <a class="footer-button" style="float: right" href="#">Terms</a>
+            <a class="footer-button" style="float: right" href="#">Settings</a>
+        </footer>
+    </div>
 </body>
     
 </html>
